# libxml2-java

./: .gitignore  LICENSE  Makefile  Makefile.in  README.md  TODO.txt  build.gradle  build.xml  config.h.in  configure  configure.ac  gen_javah.sh  sample.xml
javadoc/: allclasses-frame.html  allclasses-noframe.html  constant-values.html  deprecated-list.html  help-doc.html  index-all.html  index.html  overview-frame.html  overview-summary.html  overview-tree.html  package-list  serialized-form.html
javadoc/org/xmlsoft/: Attribute.html  Disposable.html  Document.html  InvalidXPathExpressionException.html  LibXml.html  LibXmlException.html  Namespace.html  Node.Type.html  Node.html  NodeSet.html  SAXAdapter.html  SAXHandler.html  SAXHandlerEngine.html  XPathContext.html  XPathExpression.html  XPathExpressionException.html  XPathObject.html  package-frame.html  package-summary.html  package-tree.html
javadoc/org/xmlsoft/impl/: LocatorImpl.html  SAXHandlerEngine.html  package-frame.html  package-summary.html  package-tree.html
javadoc/rath/libxml/: Attribute.html  Disposable.html  Document.html  InvalidXPathExpressionException.html  LibXml.html  LibXmlException.html  Namespace.html  Node.Type.html  Node.html  NodeSet.html  SAXAdapter.html  SAXHandler.html  XPathContext.html  XPathExpression.html  XPathObject.html  package-frame.html  package-summary.html  package-tree.html
javadoc/rath/libxml/impl/: LocatorImpl.html  SAXHandlerEngine.html  package-frame.html  package-summary.html  package-tree.html
javadoc/rath/libxml/jaxp/: AttrImpl.html  AttributeNamedNodeMapImpl.html  CDATASectionImpl.html  CharacterDataImpl.html  CommentImpl.html  DocumentBuilderFactoryImpl.html  DocumentBuilderImpl.html  DocumentImpl.html  ElementImpl.html  NodeImpl.html  TextImpl.html  (+11 more)
resources/: libxml2j-darwin-64.dylib
sample-xmls/: rss-infoq.xml
samples/: sample-springbeans.xml
src/main/c/: Makefile.in  cache.h  document.c  document.cpp  libxml.c  libxml.cpp  locator.c  node.c  node.cpp  rath_libxml_Document.h  rath_libxml_LibXml.h  rath_libxml_Node.h  rath_libxml_XPathExpression.h  utils.c  utils.cpp  utils.h  xpath_ctx.c  xpath_ctx.cpp  xpath_expr.c  xpath_expr.cpp  xpath_obj.c
tools/: translate_cpp_to_c.rb
(+131 files in other folders)
